# omnisend-python

./: .editorconfig  .isort.cfg  .pre-commit-config.yaml  Pipfile  README.md  setup.cfg  setup.py
omnisend/: __init__.py  client.py  models.py
