[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE

[bdist_wheel]
# This flag says to generate wheels that support both Python 2 and Python
# 3. If your code will not run unchanged on both Python 2 and 3, you will
# need to generate separate wheels for each Python version that you
# support. Removing this line (or setting universal to 0) will prevent
# bdist_wheel from trying to make a universal wheel. For more see:
# https://packaging.python.org/guides/distributing-packages-using-setuptools/#wheels
universal=0

[flake8]
exclude =
    .*/,
    __pycache__/,
    docs/,
    node_modules/,
    */migrations/
ignore = H101,H238,H301,H306,W503
max-line-length = 88

[pep8]
exclude =
    .*/,
    __pycache__/,
ignore = H101,H238,H301,H306,W503
max-line-length = 88

[pydocstyle]
ignore = D100, D101, D102, D103, D104, D105, D106, D107, D203, D213
inherit = false
match-dir = (?!migrations)[^\.].*
max-line-length = 88

[isort]
skip =
    .direnv
    .tox
    .venv
not_skip = __init__.py

# Vertical Hanging Indent
multi_line_output = 3
include_trailing_comma: True

line_length = 88
